<resources>
    <string name="home_page_name">Accueil</string>
    <string name="meteo_page">Meteo</string>
    <string name="metro_page">Transport tag</string>
    <string name="app_name">Miage Météo</string>
    <string name="welcome_message">Bienvenue sur Miage Météo</string>
    <string name="title_close">Close</string>
    <string name="password">Mot de passe</string>
    <string name="login_tag">Se connecter</string>
    <string name="sign_in_tag">Créer un compte</string>
    <string name="error_bad_login">Mauvais login</string>
    <string name="home">Accueil</string>
    <string name="favorite">Favoris</string>
    <string name="about">About</string>
    <string name="settings">Paramètres</string>
    <string name="signal">Signal</string>
    <string name="itinerary">Itinéraire</string>
    <string name="traffic_info">Info Traffic</string>
    <string name="meteo">Météo</string>
    <string name="login">Login</string>
    <string name="schedule">Horaires</string>
    <string name="contact_us">Nous contacter</string>
    <string name="my_account">Mon compte</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_setting">Paramètres</string>
    <string name="title_activity_contact_us">Contactez nous</string>
    <string name="title_activity_profil">Profil</string>
    <string name="weather_api">https://api.openweathermap.org/data/2.5/weather</string>
    <string name="weater_icon">http://openweathermap.org/img/w/</string>
    <string name="api_id">91d70d4351262df9c5ac186351776afd</string>
    <string name="confirm_password">Confirmer le mot de passe</string>
    <string name="title_activity_login">Miage Métro</string>
    <string name="title_location_permission">Veuillez donner l\'autorisation d\'activer le GPS</string>
    <string name="ok">OK</string>
    <string name="text_location_permission">Voulez vous activer votre GPS</string>
    <string name="metro_api">http://data.metromobilite.fr/api/</string>
    <string name="email">Email</string>

</resources>
