<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/home"/>

        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule_24dp"
            android:title="@string/schedule"/>

        <item
            android:id="@+id/nav_itinerary"
            android:icon="@drawable/ic_navigation_24dp"
            android:title="@string/itinerary"/>

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite_24dp"
            android:title="@string/favorite"/>

        <!--item
            android:id="@+id/nav_signal"
            android:icon="@drawable/ic_warning_24dp"
            android:title="@string/signal"/-->
    </group>
</menu>