<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_message"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="22sp"/>

    <EditText
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        />

    <EditText
        android:id="@+id/password_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorLightPrimary"
        android:textColor="@color/textPrimary"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/login_tag" />

    <Button android:id="@+id/btn_create_account"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightPrimary"
        android:textColor="@color/textPrimary"
        style="@android:style/Widget.Holo.Button.Borderless"
        android:layout_alignParentBottom="true"
        android:text="@string/sign_in_tag" />
</LinearLayout>